+ Creazione Hackathon, Aggiunta Mentore all'Hackathon